--- a/front-int/src/components/Header/header.css
+++ b/front-int/src/components/Header/header.css
@@ -1,27 +1,42 @@
 .header {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background-color: blueviolet;
-    padding: 15px;
+  position: fixed;
+  top: 0px;
+  left: 5px; 
+  right: 5px; 
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  z-index: 100;
+}
+
+.logo {
+  height: 60px;
 }
 
 .popup {
-    all: unset;
-    cursor: pointer;
+  all: unset;
+  cursor: pointer;
 }
 
-.modal{
-    position: absolute;
-    top: 100%;
-    left: 73%;
-    display: flex;
-    flex-direction: column;
-    justify-content: baseline;
-    align-items: baseline;
-    gap: 10px;
-    border: 5px solid #b839e6;
-    background-color: rgb(255, 240, 252);
-    padding: 10px;
+.user-icon {
+  height: 60px;
+}
+
+.modal {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  height: calc(100vh - 25px);
+  width: 250px;
+  border-left: 5px solid #42154E;
+  border-top: 5px solid #42154E;
+  background-color: rgb(255, 240, 252);
+  padding: 20px;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
